--- a/Formulario.html
+++ b/Formulario.html
@@ -50,5 +50,15 @@
         <input type="submit" value="Enviar">
 
     </form>
+    <hr>
+    <h2>Enlaces disponibles:</h2>
+    <ul>
+        <li>
+            <a href="Tabla.html">Ver la tabla</a>
+        </li>
+        <li>
+            <a href="Lista.html">Ver Lista de enlaces</a>
+        </li>
+    </ul>
 </body>
 </html>
