--- a/Tabla.html
+++ b/Tabla.html
@@ -56,5 +56,15 @@
         </tbody>
 
     </table>
+    <hr>
+    <h2>Enlaces disponibles:</h2>
+    <ul>
+        <li>
+            <a href="Formulario.html">Ir al Formulario</a>
+        </li>
+        <li>
+            <a href="Lista.html">Ver Lista de enlaces</a>
+        </li>
+    </ul>
 </body>
 </html>
