Creada dos paginas extras

--- a/Lista.html
+++ b/Lista.html
@@ -16,6 +16,12 @@
         <li>
             <a href="Tabla.html">Ver la Tabla</a>
         </li>
+        <li>
+            <a href="Supermercado.html">Ir al supermercado</a>
+        </li>
+        <li>
+            <a href="Reserva.html">Hacer pedido</a>
+        </li>
     </ul>
     <hr>
 </body>
