--- a/Tabla.html
+++ b/Tabla.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabla</title>
+    <script src="js/index.js" type="text/javascript" defer></script>
 </head>
 <body>
     <h1>Tabla:</h1>
+    <input type="text" class="filtro">
+       
     <table border="1">
         <thead>
             <tr>
@@ -16,43 +19,11 @@
                 <th>Teléfono</th>
                 <th>Curso</th>
                 <th>Sexo</th>
+                <th>Acciones</th>
             </tr>
         </thead>
 
         <tbody>
-            <tr>
-                <td>Héctor</td>
-                <td>Roviño Palomar</td>
-                <td>hector@gmail.com</td>
-                <td>666666666</td>
-                <td>Desarrollo de Aplicaciones Web</td>
-                <td>Hombre</td>
-            </tr>
-            <tr>
-                <td>Laura</td>
-                <td>Pérez Gómez</td>
-                <td>laura@gmail.com</td>
-                <td>612345678</td>
-                <td>Desarrollo de Aplicaciones Multiplataforma</td>
-                <td>Mujer</td>
-            </tr>
-            <tr>
-                <td>Carlos</td>
-                <td>Gómez Sánchez</td>
-                <td>carlos@hotmail.com</td>
-                <td>698765432</td>
-                <td>Marketing</td>
-                <td>Otro</td>
-            </tr>
-            <tr>
-                <td>Ana</td>
-                <td>López Martínez</td>
-                <td>ana@yahoo.com</td>
-                <td>655443322</td>
-                <td>Administración y Finanzas</td>
-                <td>Mujer</td>
-            </tr>
-
         </tbody>
 
     </table>
