--- a/Formulario.html
+++ b/Formulario.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Formulario:</h1>
-    <form>
+    <form action="ws/createElement.php" method="post">
+
         <label>Nombre:</label>
         <input type="text" name="nombre">
         <br><br>
