--- a/Formulario.html
+++ b/Formulario.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
+    <script src="js/nav.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
     <h1>Formulario:</h1>
