--- a/Supermercado.html
+++ b/Supermercado.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supermercado</title>
+    <script src="js/nav.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
     <h1>🛒 Supermercado CompraGratis 🛒</h1>
