--- a/Reserva.html
+++ b/Reserva.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserva</title>
     <script src="js/nav.js" type="text/javascript" defer></script>
-    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>📦 Reserva tu pedido en CompraGratis 📦</h1>
     <p>Completa este formulario para hacer tu reserva de productos.</p>
@@ -71,13 +73,13 @@
                     <option value="Pollo">Pollo</option>
                 </select>
             </li>
-        </ul>  
+        </ul>
     </section>
 
     <div>
         <label><input type="checkbox" name="bolsa"> Bolsa reutilizable (+1€)</label>
         <br>
-        <label><input type="checkbox" name="express"> Entrega express (+4.50€)</label>  
+        <label><input type="checkbox" name="express"> Entrega express (+4.50€)</label>
 
         <br>
         <label>Sugerencias de entrega:</label><br>
@@ -98,4 +100,5 @@
     </footer>
 
 </body>
+
 </html>
