--- a/Supermercado.html
+++ b/Supermercado.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supermercado</title>
     <script src="js/nav.js" type="text/javascript" defer></script>
-    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>🛒 Supermercado CompraGratis 🛒</h1>
     <p>Bienvenid@ a Supermercado CompraGratis, aquí podrás encontrar los mejores productos al mejor precio</p>
@@ -95,7 +97,7 @@
             </ul>
         </li>
     </ul>
-    <p>        
+    <p>
         <a href="Reserva.html">
             <button>Hacer pedido</button>
         </a>
@@ -114,4 +116,5 @@
         <p><i>© 2025 Supermercado CompraGratis | Contacto: incidencias@compragratis.es</i></p>
     </footer>
 </body>
+
 </html>
